Version 0.XXXXX | Next Sunday AD | 889cb74

    Resolved Issues/Bug Fixes:
     * $group->child( $i ) no longer crashes when $group has less than $i kids

    API Changes/Compatibility Information:
     * FLTK::Group->add( ... ), ->insert( ... ), and ->replace( ... ) now
         return the widget added, inserted, or used as a replacement. This
         allows code like my $box = $window->add( FLTK::Widget->( ... ) ); and
         is not compatible with the C++ API
     * New Widgets/Types
       - StatusBarGroup, ToggleButton, ToggleItem, ValueSlider
     * Add support for add_fd( ... ) and remove_fd( ... )

    Documentation/Sample Code/Test Suite/Metadata:
     * Updated repo URLs
     * Updated README
     * Moved basic POD from xs/FLTK.xs to lib/FLTK.pm
     * Allow systems to skip tests when Test::NeedsDisplay fails
     * Upgraded ask( ... ) and choice( ... ) to major C++/Perl API differences
     * New, simple IO watcher example (echo server)

Version 0.532006 | 2010-09-27 04:13:25Z (Mon, 27 Sep 2010) | 04ca288

    Resolved Issues/Bug Fixes:
     * Cleaned up general stupidity in FLTK::TabGroup->tab_positions()
     * Attempt to use the correct resource builder for MSVC
     * Fix doublefree when ...->destroy() is done manually on subclassed
         widgets

    Internal/Behavioral Changes:
     * Build system has been tweaked to avoid a bug in ExtUtils::ParseXS
     * Require Perl 5.10 (which I consider quite old) or better

    Documentation/Sample Code/Test Suite/Metadata:
     * New FLTK::Cookbook::TabGroup::Simple
     * Move from META.yml to META.json. The future is now.

Version 0.532005001 | 2010-04-17 14:25:12Z (Sat, 17 Apr 2010) | b9f4e5a

    API Changes/Compatibility Information:
     * New Widgets/Types
       - TextDisplay, TextDisplay::StyleTableEntry
     * Early FLTK::Theme support

    Meanwhile:
     * 開例 R. was born November 16th at 8:58am. She was 3.670kg and 52cm long